--- a/Engine_0.1/Engine_0.1.vcxproj
+++ b/Engine_0.1/Engine_0.1.vcxproj
@@ -134,7 +134,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;_CRT_SECURE_NO_DEPRECATE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <AdditionalIncludeDirectories>$(ProjectDir)librerias\glfw\include;$(ProjectDir)librerias\glew-2.1.0\include;$(ProjectDir)librerias\glm;$(ProjectDir)librerias\reactphysics3d\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <Optimization>Disabled</Optimization>
+      <Optimization>Full</Optimization>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
