Generacion de laberinto en formato grafo

--- a/Engine_0.1/Engine_0.1.vcxproj.filters
+++ b/Engine_0.1/Engine_0.1.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="Cube.cpp">
       <Filter>Archivos de origen\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="Graph.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -88,6 +91,9 @@
     </ClInclude>
     <ClInclude Include="Cube.h">
       <Filter>Archivos de encabezado\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="Graph.h">
+      <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
