--- a/Engine_0.1/Engine_0.1.vcxproj.filters
+++ b/Engine_0.1/Engine_0.1.vcxproj.filters
@@ -57,9 +57,6 @@
     <ClCompile Include="Key.cpp">
       <Filter>Archivos de origen\Entities</Filter>
     </ClCompile>
-    <ClCompile Include="read_model.cpp">
-      <Filter>Archivos de origen\Utils</Filter>
-    </ClCompile>
     <ClCompile Include="Cube.cpp">
       <Filter>Archivos de origen\Entities</Filter>
     </ClCompile>
@@ -77,6 +74,9 @@
     </ClCompile>
     <ClCompile Include="MenuItem.cpp">
       <Filter>Archivos de origen\Menus</Filter>
+    </ClCompile>
+    <ClCompile Include="OBJ_Loader.cpp">
+      <Filter>Archivos de origen\Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -101,9 +101,6 @@
     <ClInclude Include="Key.h">
       <Filter>Archivos de encabezado\Entities</Filter>
     </ClInclude>
-    <ClInclude Include="read_model.h">
-      <Filter>Archivos de encabezado\Utils</Filter>
-    </ClInclude>
     <ClInclude Include="stb_image.h">
       <Filter>Archivos de encabezado\Utils</Filter>
     </ClInclude>
@@ -124,6 +121,9 @@
     </ClInclude>
     <ClInclude Include="MenuItem.h">
       <Filter>Archivos de encabezado\Menus</Filter>
+    </ClInclude>
+    <ClInclude Include="OBJ_Loader.h">
+      <Filter>Archivos de encabezado\Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
