--- a/Engine_0.1/Engine_0.1.vcxproj
+++ b/Engine_0.1/Engine_0.1.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Graph.cpp" />
     <ClCompile Include="Key.cpp" />
@@ -167,6 +168,7 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Graph.h" />
     <ClInclude Include="Key.h" />
