--- a/Engine_0.1/Engine_0.1.vcxproj.filters
+++ b/Engine_0.1/Engine_0.1.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClCompile Include="Space.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="MenuSpace.cpp">
-      <Filter>Archivos de origen</Filter>
-    </ClCompile>
     <ClCompile Include="Graph.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
@@ -101,6 +98,9 @@
     </ClCompile>
     <ClCompile Include="KeyEnemy.cpp">
       <Filter>Archivos de origen\Entities</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuSpace.cpp">
+      <Filter>Archivos de origen\Menus</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
